Fix the overflow issue in layout
removed the template-rows defiition,removed the 100% declaration

--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body,html{
     margin: 0px;
     padding: 0px;
-    height: 100%;
     
 }
 
 
 .container{
     display: grid;
-    height: 100%;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr;
     background-color: blanchedalmond;
+    grid-auto-flow: row;
+    
 }
 
 .sidebar{
@@ -32,7 +31,6 @@ body,html{
     background-color: aqua;
     grid-row:2/3 ;
     grid-column: 2/3;
-    height: 100%;
     display:grid ;
     grid-template-columns: 3fr 1fr;
     gap: 15px;
@@ -51,6 +49,7 @@ body,html{
 
 .projects>div{
     background-color: darkgreen;
+    height: 100px;
 }
 
 .announcement{
@@ -62,3 +61,9 @@ body,html{
     grid-column: 2/3;
     background-color: darkgoldenrod;
 }
+
+/* .footer{
+    background-color: brown;
+    grid-row:3/4 ;
+    grid-column: 1/3;
+} */
